@@ -1,4 +1,4 @@
-//  -*- MPC -*-
+// -*- MPC -*-
 // $Id$
 
 workspace {
